istio/istio-mutual-authentication/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: default
  labels:
    app: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - name: service-a
        image: poxstone/flask_any_response
        ports:
        - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: default
  labels:
    app: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b
        image: poxstone/flask_any_response
        ports:
        - containerPort: 8080
