istio/istio-mutual-authentication/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: default
spec:
  selector:
    app: service-a
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: default
spec:
  selector:
    app: service-b
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: service-c
  namespace: default
spec:
  selector:
    app: service-c
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
