istio/istio-mutual-authentication/destinationRule.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "auth-test-dr"
  namespace: "default"
spec:
  host: "*"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
